+ fixed design   + fixed: top menu colours   + fixed: pictures now take the size of the container and dont make the container overflow   + fixed: side menu now is bootstrap comlient and it load the actual categories(and shows how much moves are in the category)   + other: design related changes

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,3 +1,101 @@
 .custom-shadow-top {
   background: url(../images/main-shadow.png) no-repeat center top;
 }
+
+.navbar-default {
+  background-image: -webkit-linear-gradient(#3d3d3d, #4d4d4d 50%, #3d3d3d);
+  background-image: -o-linear-gradient(#3d3d3d, #4d4d4d 50%, #3d3d3d);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3d3d3d), color-stop(50%, #4d4d4d), to(#3d3d3d));
+  background-image: linear-gradient(#3d3d3d, #4d4d4d 50%, #3d3d3d);
+  background-repeat: no-repeat;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3d3d3d', endColorstr='#4d4d4d', GradientType=0);
+  -webkit-filter: none;
+  filter: none;
+}
+
+.post-Image-link {
+  width: 100%;
+}
+
+.widgettitle-container {
+  background: url(../images/widget-title.png)  no-repeat 0 0;
+  background-size: 100% 100%;
+  margin-bottom: 0;
+}
+.display-inline{
+  display: inline;
+}
+
+.hoverbuble span {
+  background: url(../images/lates-ico.png) no-repeat 0 0;
+  background-size: contain;
+  opacity: 0;
+  -moz-opacity: 0;
+  filter:alpha(opacity=0); text-shadow: rgba(255,255,255,0.9) 0px 1px 0px;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: -5px;
+  right: 0;
+  text-align: center;
+  line-height: 30px;
+  font-size: 14px;
+  color: #383838;
+  transition: opacity 0.4s;
+  -moz-transition: opacity 0.4s;
+  -webkit-transition: opacity 0.4s;
+  -o-transition: opacity 0.4s;
+}
+.hoverbuble:hover span { display: block; opacity: 1;
+  -moz-opacity: 1;
+  filter:alpha(opacity=100);}
+
+.well
+{
+  background: url(../images/widget-bg.png)
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* sidebar bootstrap style */
+
+.nav-side-menu .toggle-btn {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .nav-side-menu {
+    position: relative;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .nav-side-menu .toggle-btn {
+    display: block;
+    cursor: pointer;
+
+    right: 10px;
+    top: 10px;
+    z-index: 10 !important;
+    padding: 3px;
+    background-color: #ffffff;
+    color: #000;
+    width: 40px;
+    text-align: center;
+  }
+
+}
+@media (min-width: 767px) {
+  .nav-side-menu .menu-list .menu-content {
+    display: block;
+  }
+}
+/*end of sidebar bootstrap style*/
