--- a/public/stylesheets/template.css
+++ b/public/stylesheets/template.css
@@ -54,15 +54,25 @@ textarea { overflow: auto; }
 #logo { width: 272px; font-size: 0; line-height: 0; float: left; }
 #logo a { height: 75px; background: url(../images/logo.png) no-repeat 0 0; text-indent: -4000px; display: block; }
 
-#navigation { width: 669px; height: 66px; padding: 6px 7px 0 8px; margin-top: 10px; position: relative; margin-right: -5px;  background: url(../images/navigation.png) no-repeat 0 0; font-family: 'coolvetica', arial, helvetica, serif; font-size: 16px; color: #fff; float: right; }
-#navigation ul { list-style: none; list-style-position: outside; line-height: 49px; }
-#navigation ul li { float: left; background: url(../images/navigation-border.png) no-repeat right 0; padding-right: 2px;  }
-#navigation ul li a { display: block; color: #fff; text-shadow: rgba(0,0,0,0.5) 0px 2px 2px; padding: 0 36px; position: relative; }
+#navigation {
+    font-family: 'coolvetica', arial, helvetica, serif;
+    font-size: 16px;
+    color: #fff;
+
+}
+
 #navigation ul li a:hover,
 #navigation ul li.last a:hover { background: url(../images/navigation-hover.png) repeat-x 0 0; text-decoration: none; }
 #navigation ul li.last { background: transparent; padding-right: 0;  }
-#navigation ul li.last a { padding-right: 33px; padding-left: 33px; border-right: 0; background: transparent; }
-#navigation ul li a span { background: url(../images/lates-ico.png) no-repeat 0 0; opacity: 0;
+#navigation ul li.last a {
+    padding-right: 33px;
+
+    border-right: 0;
+    background: transparent;
+}
+/*
+#navigation ul li a span {
+    background: url(../images/lates-ico.png) no-repeat 0 0; opacity: 0;
     -moz-opacity: 0;
     filter:alpha(opacity=0); text-shadow: rgba(255,255,255,0.9) 0px 1px 0px; width: 39px; height: 39px; position: absolute; top: -17px; right: 0; text-align: center; line-height: 39px; font-size: 14px; color: #383838;
     transition: opacity 0.4s;
@@ -73,13 +83,18 @@ textarea { overflow: auto; }
 #navigation ul li a:hover span { display: block; opacity: 1;
     -moz-opacity: 1;
     filter:alpha(opacity=100);}
-
+*/
 .main { padding-top: 20px; padding-bottom: 50px;  background: url(../images/main-shadow.png) no-repeat center bottom; }
 .main h3 { color: #1cfe10; font-size: 20px; font-family: 'coolvetica', arial, helvetica, serif; font-weight: normal; text-shadow: rgba(0,0,0,0.9) 0px 0px 2px; }
 .main h2 { color: #1cfe10; font-size: 22px; font-family: 'coolvetica', arial, helvetica, serif; font-weight: normal; text-shadow: rgba(0,0,0,0.9) 0px 0px 2px; }
 .main h2 a { color: #1cfe10; }
 .main h2 a:hover { text-decoration: none; color: #0acc00;  }
-.content { float: right; padding-left: 2.5px;}
+.content
+{
+    float: right;
+    margin-left: -15px;
+    padding-right: 15px;
+}
 
 .post { background: url(../images/widget-bg.png) repeat 0 0; margin-bottom: 30px;  padding: 2px; box-shadow: 0px 0px 15px rgba(0,0,0,0.4); -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.4); -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.4); -o-box-shadow: 0px 0px 15px rgba(0,0,0,0.4);   }
 .post-inner { background: url(../images/patern.png) repeat 0 0; padding: 18px 15px 20px 17px;
@@ -113,13 +128,20 @@ textarea { overflow: auto; }
 .post a.more { color: #1cfe10; background: url(../images/list-arr.png) no-repeat 0 4px; padding-left: 9px; }
 .post a.more:hover { color: #0acc00; text-decoration: none; }
 
-.sidebar {float: left; margin-right: 5px;}
+.sidebar { margin-right: 5px;}
 .sidebar .widget { background: url(../images/widget-bg.png) repeat 0 0; margin-bottom: 30px;  padding: 2px; box-shadow: 0px 0px 15px rgba(0,0,0,0.4); -moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.4); -webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.4); -o-box-shadow: 0px 0px 15px rgba(0,0,0,0.4);  }
-.sidebar .widget h3.widgettitle { background: url(../images/widget-title.png)  no-repeat 0 0;background-size: 100% 100%; height: 53px; line-height: 53px; padding-left: 27px; margin: 0px; font-size: 16px;}
+
+.sidebar .widget h3.widgettitle {
+    height: 53px;
+    line-height: 53px;
+    padding-left: 27px;
+    margin: 0px;
+    font-size: 16px;
+}
 .sidebar .widget ul { list-style: none; list-style-position: outside; background: #171717; font-size: 14px; color: #fff; text-shadow: rgba(0,0,0,0.5) 0px 0px 3px; box-shadow: 0px 0px 14px rgba(0,0,0,0.6) inset; -moz-box-shadow: 0px 0px 14px rgba(0,0,0,0.6) inset; -webkit-box-shadow: 0px 0px 14px rgba(0,0,0,0.6) inset; -o-box-shadow: 0px 0px 14px rgba(0,0,0,0.6) inset;  }
 .sidebar .widget li { background: url(../images/border-list.png) repeat-x 0 0; }
 .sidebar .widget li.first { background: transparent }
-.sidebar .widget li a { display: block; padding: 8px 65px 8px 43px; color: #fff; position: relative; text-shadow: rgba(0,0,0,0.9) 0px 0px 2px; background: url(../images/list-arr.png) no-repeat 30px 16px;}
+.sidebar .widget li a { display: block; padding: 8px 65px 8px 20px; color: #fff; position: relative; text-shadow: rgba(0,0,0,0.9) 0px 0px 2px; background: url(../images/list-arr.png) no-repeat 10px 16px;}
 .sidebar .widget li a strong { color: #b9b9b9; font-weight: normal; position: absolute; right: 0; top: 10px; width: 55px; font-size: 12px;  }
 .sidebar .widget li a:hover { background-color: #2f2f2f; text-decoration: none; box-shadow: 0px 0px 14px rgba(0,0,0,0.4) inset; -moz-box-shadow: 0px 0px 14px rgba(0,0,0,0.4) inset; -webkit-box-shadow: 0px 0px 14px rgba(0,0,0,0.4) inset; -o-box-shadow: 0px 0px 14px rgba(0,0,0,0.4) inset;  }
 
